fix homeroom and add statis for student and teacher